Fix layout issue in button & add AOS animation.

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,7 +189,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   transition: background 0.3s;
@@ -241,6 +241,7 @@ a {
 @media screen and (min-width: 1024px) {
   .btn {
     font-size: 1.5rem;
+    padding: 2rem 3rem;
   }
 }
 
